change link t inventory

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -135,7 +135,7 @@
 
 # (pathlist) Comma separated list of Ansible inventory sources
 ;inventory=/etc/ansible/hosts
-inventory=/home/mrid/develop/ansible/inventory/hosts.yml
+inventory=./inventory/hosts.yml
 
 
 # (pathspec) Colon separated paths in which Ansible will search for HttpApi Plugins.
